styles.css
@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');

* {
    padding: 0;
    margin: 0;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Urbanist';
    font-size: 20px;
    background-color: #333333;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

li {
    list-style: none;
}

button {
    font-family: 'Urbanist';
    font-weight: bold;
    padding: 0.3rem 0.6rem;
    border-radius: 0.5rem;
    background-color: black;
    color: #dedede;
    font-size: 1.2rem;
    border: 3px solid black;
    margin: 10px 0;
}

button:hover:not(#qrise) {
    background-color: #dedede;
    color: #000;
    border: 3px solid black;
    cursor: pointer;
}

.icons img:hover {
    transform: scale(1.1);
    cursor: pointer;
}

#navbar {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    color: #ffffff;
    background-color: #333333;
    padding: 20px;
}

#navbar {
    color: #ffffff;
    font-size: 30px;
    text-decoration: none;
}

#navbar :hover {
    color: #dedede;
    cursor: pointer;
}

#profile {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 20px;
}

#profile-text {
    margin: 35px 55px;
    padding: 3px 10px;
    border-left: solid 3px #333333;
    line-height: 150%;
    scale: 1.3;
}

#email {
    font-size: 1.4rem;
}

.classes li,
.projects li {
    border-left: solid 3px #333333;
    padding-left: 5px;
    margin: 10px 0;
}

.projects li {
    margin-bottom: 0;
}

.about,
.classes,
.projects {
    width: 55%;
    margin: 10px auto;
}

.body {
    background-color: #dedede;
    padding: 2px 0;
}

::-webkit-scrollbar {
    display: none;
}

@media screen and (orientation: portrait) {
    #navbar {
        font-size: 20px;
    }
    #profile {
        transform: scale(0.8);
        width: 100%;
        margin: 0;
    }
}

